fixed layout issued

--- a/layout/layout/home.scss
+++ b/layout/layout/home.scss
@@ -34,7 +34,7 @@
             object-fit: cover;
 
             &:before{
-            content: "yee yee ass haircut";
+            /* content: "yee yee ass haircut"; */
             width: 100%;
             height: 20rem;
             background-color: aqua;
